# protonmail-mcp-server

./: .env.example  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
src/protonmail_mcp/: config.py  email_parser.py  imap_client.py  server.py  smtp_client.py
src/protonmail_mcp/tools/: __init__.py  folders.py  mailboxes.py  manage.py  messages.py  reply.py  search.py  send.py
tests/: conftest.py
tests/features/: conftest.py  delete_message.feature  get_message.feature  mailboxes.feature  search.feature  send_email.feature  test_delete_message.py  test_get_message.py  test_mailboxes.py  test_search.py  test_send_email.py
tests/integration/: conftest.py  test_imap.py  test_smtp.py
tests/unit/: test_config.py  test_email_parser.py  test_imap_client.py  test_smtp_client.py  test_tools.py
