[project]
name = "protonmail-mcp"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.26.0",
    "aioimaplib>=2.0.1",
    "aiosmtplib>=4.0.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
protonmail-mcp = "protonmail_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/protonmail_mcp"]
