[project]
name = "protonmail-mcp"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.26.0",
    "aioimaplib>=2.0.1",
    "aiosmtplib>=4.0.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
protonmail-mcp = "protonmail_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/protonmail_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: Integrationstester mot en riktig ProtonMail Bridge",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "pytest-bdd>=7.0.0",
    "pytest-mock>=3.14.0",
]
